--- a/ChessFabrickWeb/Views/Home/Index.cshtml
+++ b/ChessFabrickWeb/Views/Home/Index.cshtml
@@ -14,6 +14,9 @@
         <div class="col-6">
             <input type="button" id="sendButton" value="Send Message" />
         </div>
+        <div class="col-6">
+            <input type="button" id="testButton" value="Test" />
+        </div>
     </div>
 </div>
 <div class="row">
