--- a/ChessFabrickWeb/Views/Home/Index.cshtml
+++ b/ChessFabrickWeb/Views/Home/Index.cshtml
@@ -11,10 +11,10 @@
     </div>
     <div class="row">&nbsp;</div>
     <div class="row">
-        <div class="col-6">
+        <div class="col-3">
             <input type="button" id="sendButton" value="Send Message" />
         </div>
-        <div class="col-6">
+        <div class="col-3">
             <input type="button" id="testButton" value="Test" />
         </div>
     </div>
@@ -29,5 +29,5 @@
         <ul id="messagesList"></ul>
     </div>
 </div>
-<script src="~/js/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/chat.js"></script>
+<script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
+<script src="~/js/chess.js"></script>
