--- a/ChessFabrickWeb/Views/Home/Index.cshtml
+++ b/ChessFabrickWeb/Views/Home/Index.cshtml
@@ -1,24 +1,32 @@
 ﻿@page
-<div class="container">
-    <div class="row">&nbsp;</div>
-    <div class="row">
-        <div class="col-2">User</div>
-        <div class="col-4"><input type="text" id="userInput" /></div>
-    </div>
-    <div class="row">
-        <div class="col-2">Message</div>
-        <div class="col-4"><input type="text" id="messageInput" /></div>
-    </div>
-    <div class="row">&nbsp;</div>
-    <div class="row">
-        <div class="col-3">
-            <input type="button" id="sendButton" value="Send Message" />
+    <div class="container">
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-2">Method</div>
+            <div class="col-4"><input type="text" id="inputMethod" /></div>
         </div>
-        <div class="col-3">
-            <input type="button" id="testButton" value="Test" />
+        <div class="row">
+            <div class="col-2">Input 1</div>
+            <div class="col-4"><input type="text" id="input1" /></div>
+        </div>
+        <div class="row">
+            <div class="col-2">Input 2</div>
+            <div class="col-4"><input type="text" id="input2" /></div>
+        </div>
+        <div class="row">
+            <div class="col-2">Input 3</div>
+            <div class="col-4"><input type="text" id="input3" /></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-3">
+                <input type="button" id="joinButton" value="Join" />
+            </div>
+            <div class="col-3">
+                <input type="button" id="sendButton" value="Send" disabled />
+            </div>
         </div>
     </div>
-</div>
 <div class="row">
     <div class="col-12">
         <hr />
