--- a/ChessFabrickWeb/Views/_ViewImports.cshtml
+++ b/ChessFabrickWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ChessFabrickWeb
-@using ChessFabrickWeb.Models
+@using ChessFabrickCommons.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
