--- a/ChessFabrickWeb/Views/Home/Index.cshtml
+++ b/ChessFabrickWeb/Views/Home/Index.cshtml
@@ -1,41 +1,5 @@
-﻿@page
-    <div class="container">
-        <div class="row">&nbsp;</div>
-        <div class="row">
-            <div class="col-2">Method</div>
-            <div class="col-4"><input type="text" id="inputMethod" /></div>
-        </div>
-        <div class="row">
-            <div class="col-2">Input 1</div>
-            <div class="col-4"><input type="text" id="input1" /></div>
-        </div>
-        <div class="row">
-            <div class="col-2">Input 2</div>
-            <div class="col-4"><input type="text" id="input2" /></div>
-        </div>
-        <div class="row">
-            <div class="col-2">Input 3</div>
-            <div class="col-4"><input type="text" id="input3" /></div>
-        </div>
-        <div class="row">&nbsp;</div>
-        <div class="row">
-            <div class="col-3">
-                <input type="button" id="joinButton" value="Join" />
-            </div>
-            <div class="col-3">
-                <input type="button" id="sendButton" value="Send" disabled />
-            </div>
-        </div>
-    </div>
-<div class="row">
-    <div class="col-12">
-        <hr />
-    </div>
-</div>
-<div class="row">
-    <div class="col-6">
-        <ul id="messagesList"></ul>
-    </div>
-</div>
-<script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
-<script src="~/js/chess.js"></script>
+﻿@{
+    ViewData["Title"] = "Index";
+}
+<h1>Download the .NET Client below:</h1>
+<p><a href="~/download/ChessFabrickClient.exe">ChessFabrickClient.exe</a></p>
