--- a/ChessFabrickWeb/Views/Home/Index.cshtml
+++ b/ChessFabrickWeb/Views/Home/Index.cshtml
@@ -3,3 +3,4 @@
 }
 <h1>Download the .NET Client below:</h1>
 <p><a href="~/download/ChessFabrickClient.exe">ChessFabrickClient.exe</a></p>
+<p>C# > JavaScript</p>
