--- a/ChessFabrickWeb/Views/Home/Privacy.cshtml
+++ b/ChessFabrickWeb/Views/Home/Privacy.cshtml
@@ -3,4 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p><img src="~/images/eye.png" /></p>
+<p>Nothing you do on this website is private.</p>
+<p>Even your accounts are insecure.<br/>The password is disregarded completely, you can log in just using your Name.</p>
